add auth validation to rest routes and complete add game services with many to many relationship
